# src/routes/thread.route.ts
@@ -1,31 +1,27 @@
 import express from 'express';
 import threadController from '../controllers/thread.controller';
 import { authCheck } from '../middlewares/auth-check.middleware';
-import { initCloudinary } from '../middlewares/cloudinary.middleware';
 import { uploadImage } from '../middlewares/upload.middleware';
 
 const router = express.Router();
 
-router.get('/', authCheck, threadController.getThreads);
+router.get('/', threadController.getThreads);
 router.get('/:id', threadController.getThreadById);
 router.post(
   '/',
   authCheck,
-  initCloudinary,
   uploadImage.single('images'),
   threadController.createThread
 );
 router.patch(
   '/:id',
   authCheck,
-  initCloudinary,
   uploadImage.single('images'),
   threadController.updateThread
 );
 router.delete(
   '/:id',
   authCheck,
-  initCloudinary,
   uploadImage.single('images'),
   threadController.deleteThread
 );
